# ParticleLife

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
scripts/: run-windows.ps1
src/: ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  Particle.h  ParticleWidget.cpp  ParticleWidget.h  main.cpp
